// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CodeInput Display tests should display correctly 1`] = `
<div>
  <div
    aria-label="Код подтверждения"
    class="component"
    role="group"
  >
    <div
      class=""
    >
      <input
        aria-label="Код 1 из 4"
        autocomplete="one-time-code"
        class="input component"
        data-code-input-index="0"
        inputmode="numeric"
        pattern="[0-9]*"
        value=""
      />
      <input
        aria-label="Код 2 из 4"
        autocomplete=""
        class="input component"
        data-code-input-index="1"
        inputmode="numeric"
        pattern="[0-9]*"
        value=""
      />
      <input
        aria-label="Код 3 из 4"
        autocomplete=""
        class="input component"
        data-code-input-index="2"
        inputmode="numeric"
        pattern="[0-9]*"
        value=""
      />
      <input
        aria-label="Код 4 из 4"
        autocomplete=""
        class="input component"
        data-code-input-index="3"
        inputmode="numeric"
        pattern="[0-9]*"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`CodeInput Display tests should display correctly with error 1`] = `
<div>
  <div
    aria-label="Код подтверждения"
    class="component"
    role="group"
  >
    <div
      class="shake"
    >
      <input
        aria-label="Код 1 из 4"
        autocomplete="one-time-code"
        class="input component hasError"
        data-code-input-index="0"
        inputmode="numeric"
        pattern="[0-9]*"
        value=""
      />
      <input
        aria-label="Код 2 из 4"
        autocomplete=""
        class="input component hasError"
        data-code-input-index="1"
        inputmode="numeric"
        pattern="[0-9]*"
        value=""
      />
      <input
        aria-label="Код 3 из 4"
        autocomplete=""
        class="input component hasError"
        data-code-input-index="2"
        inputmode="numeric"
        pattern="[0-9]*"
        value=""
      />
      <input
        aria-label="Код 4 из 4"
        autocomplete=""
        class="input component hasError"
        data-code-input-index="3"
        inputmode="numeric"
        pattern="[0-9]*"
        value=""
      />
    </div>
    <div
      class="error"
      role="alert"
    >
      Error
    </div>
  </div>
</div>
`;
